syntax = "proto3";

import "google/protobuf/timestamp.proto";

package games_service;

option go_package = "./;games_service";

service GamesService {
  rpc CreateGame(CreateGameReq) returns (CreateGameRes);
  rpc UpdateGame(UpdateGameReq) returns (UpdateGameRes);
  rpc GetGameById(GetGameByIdReq) returns (GetGameByIdRes);
}

message Game {
  string GameId = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  string Genre = 5;
  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}

message CreateGameReq {
  string Name = 1;
  string Description = 2;
  double Price = 3;
  string Genre = 4;
}

message CreateGameRes { string GameId = 1; }

message UpdateGameReq {
  string GameId = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  string Genre = 5;
}

message UpdateGameRes {}

message GetGameByIdReq { string GameId = 1; }

message GetGameByIdRes { Game Game = 1; }
